# tricore-gcc-toolchain

./: .gitignore  Makefile.in  README.md  configure.ac  flake.nix
.github/workflows/: build.yml
